--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Safwan Manas Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Disable Inspect -->
     <script>
       document.addEventListener("contextmenu", (event) =>
         event.preventDefault()
       );
     </script>
+    <!-- Disable Inspect Key  -->
     <script>
       document.onkeydown = function (e) {
         if (
