added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- Disable Inspect -->
-    <script>
+    <!-- <script>
       document.addEventListener("contextmenu", (event) =>
         event.preventDefault()
       );
-    </script>
+    </script> -->
     <!-- Disable Inspect Key  -->
     <script>
       document.onkeydown = function (e) {
