--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Safwan Manas Portfolio</title>
   </head>
@@ -10,11 +10,11 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- Disable Inspect -->
-    <!-- <script>
+    <script>
       document.addEventListener("contextmenu", (event) =>
         event.preventDefault()
       );
-    </script> -->
+    </script>
     <!-- Disable Inspect Key  -->
     <script>
       document.onkeydown = function (e) {
